<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    app:cardCornerRadius="6dp"
    app:cardElevation="4dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/itemRowMovieIMGPoster"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:adjustViewBounds="true"
            android:scaleType="fitCenter"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/svg_logo_the_movie_db_square"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/itemRowMovieTVRating"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:background="@drawable/bg_white_circle"
            android:backgroundTint="@color/secondaryLightColor"
            android:fontFamily="@font/abeezee"
            android:foreground="@drawable/fg_second_dark_circle_stroke"
            android:gravity="center"
            android:padding="4dp"
            android:text="@string/item_rating"
            android:textSize="10sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/itemRowMovieIMGPoster"
            app:layout_constraintTop_toTopOf="@+id/itemRowMovieIMGPoster"
            tools:ignore="SmallSp" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/itemRowMovieIMGPoster"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/itemRowMovieTVTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:fontFamily="@font/abeezee"
                android:text="@string/item_title"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/itemRowMovieTVDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/abeezee"
                android:text="@string/item_release_date" />

        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>